@@ -1,7 +1,7 @@
 ;--------------------------------------------------------------------------
 ;  _mulint.s
 ;
-;  Copyright (C) 2014, Krzysztof Nikiel, Ben Shi
+;  Copyright (C) 2014-2015, Krzysztof Nikiel, Ben Shi, Philipp Klaus Krause
 ;
 ;  This library is free software; you can redistribute it and/or modify it
 ;  under the terms of the GNU General Public License as published by the
@@ -26,33 +26,30 @@
 ;   might be covered by the GNU General Public License.
 ;--------------------------------------------------------------------------
 
-	.globl __mulint
+.globl __mulint
 
-	.area CODE
+.area CODE
+
 __mulint:
-	pushw x
-__mulint_0:
-	ld a, (#6, sp)
-	ld xl, a
-	ld a, (#8, sp)
-	mul x, a
-	ldw (#1, sp), x
-__mulint_1:
-	ld a, (#6, sp)
-	ld xl, a
-	ld a, (#7, sp)
-	mul x, a
-	ld a, xl
-	add a, (#1, sp)
-	ld (#1, sp), a
-__mulint_2:
-	ld a, (#5, sp)
-	ld xl, a
-	ld a, (#8, sp)
-	mul x, a
-	ld a, xl
-	add a, (#1, sp)
-	ld (#1, sp), a
-__mulint_3:
-	popw x
+
+	ldw	x, (#3, sp)
+	ld	a, (#6, sp)
+	mul	x, a
+	pushw	x
+
+	ldw	x, (#4, sp)
+	mul	x, a
+	ld	a, xl
+	add	a, (#1, sp)
+	ld	(#1, sp), a
+
+	ldw	x, (#5, sp)
+	ld	a, (#7, sp)
+	mul	x, a
+	ld	a, xl
+	add	a, (#1, sp)
+	popw	x
+	ld	xh, a
+	
 	ret
+
